# sysmon

./: .gitignore  Makefile  README.md  pyproject.toml  run.py  sysmon.spec
.github/workflows/: release.yml
scripts/: build-app.sh  build-deb.sh
sysmon_py/: __init__.py  __main__.py  core.py  darwin.py  linux.py  windows.py
